--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
-
+html{width:925px;}
 #header1{
     text-align:center;
-    color:green;
+    color:#22577A;
 }
 
 nav{
-    background-color:lightblue;
-    padding:15px 30px;  
+    background-color:#57CC99;
+    padding:15px 30px;
+    border:5px solid #38A3A5;
+    border-radius:20px;
+}
+.bodytext{
+    text-align: center;
 }
 
 button{
@@ -21,7 +26,7 @@ button:hover{
 }
 #footer1{
     text-align:center;
-    background-color:#a8c2ff;
-    color:black;
+    background-color:#22577A;
+    color:white;
     padding:15px
 }
