--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ nav{
     border:5px solid #38A3A5;
     border-radius:20px;
 }
-.bodytext{
+main{
     text-align: center;
 }
 
@@ -29,4 +29,7 @@ button:hover{
     background-color:#22577A;
     color:white;
     padding:15px
+}
+.blurple{
+    color:#565dff;
 }
