--- a/style.css
+++ b/style.css
@@ -1,24 +1,36 @@
 html{width:auto;}
-header{
+
+.mikeylogo{
     text-align:left;
     color:#22577A;
+    float:left;
 }
-
-nav{
-    background-color:#57CC99;
+.menu{
+    text-align:right;
+    float:right;
     padding:15px 30px;
     border:5px solid #38A3A5;
+    border-top:5px solid white;
+    border-left:5px solid white;
     border-radius:20px;
 }
+.menulink{
+    text-decoration: none;
+    color:inherit;
+}
+
+.cleardiv{
+clear:both;
+}
+
 main{
     text-align: center;
 }
 
 button{
     padding:5px 15px;
-    border-radius:10px;
     background-color:white;
-    border:2px solid gray;
+    border:2px solid white;
 }
 
 button:hover{
