--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html{width:auto;}
 .menu{
     text-align:right;
     float:right;
-    padding:15px 30px;
+    padding:50px 15px 0px 15px;
     border:5px solid #38A3A5;
     border-top:5px solid white;
     border-left:5px solid white;
