--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ html{width:auto;}
     text-align:left;
     color:#22577A;
     float:left;
+    width: 50%;
+}
+.mikeylogo img{
+    max-height:100px;
+    width:auto;
 }
 .menu{
     text-align:right;
@@ -13,6 +18,7 @@ html{width:auto;}
     border-top:5px solid white;
     border-left:5px solid white;
     border-radius:20px;
+    width:40%;
 }
 .menulink{
     text-decoration: none;
@@ -36,6 +42,7 @@ button{
 button:hover{
     background-color:lightgrey;
 }
+
 #footer1{
     text-align:center;
     background-color:#22577A;
