--- a/style.css
+++ b/style.css
@@ -1,54 +1,67 @@
-html{width:auto;}
+html{width:auto;
+    background: #EDFFEC;
+    font-size: 15px;
+    font-family:Arial, Helvetica, sans-serif;
+    color: #0D0221;
+}
+
+header{
+    position:sticky;
+}
 
 .mikeylogo{
-    text-align:left;
-    color:#22577A;
     float:left;
-    width: 50%;
+   height: 100px;
+    width: 100px;
 }
-.mikeylogo img{
-    max-height:100px;
-    width:auto;
-}
+
 .menu{
     text-align:right;
     float:right;
     padding:50px 15px 0px 15px;
-    border:5px solid #38A3A5;
-    border-top:5px solid white;
-    border-left:5px solid white;
+    border-right: 1px solid #38A3A5;
+    border-bottom: 1px solid #38A3A5;
     border-radius:20px;
-    width:40%;
+    width:400px;
+    position:sticky;
+
 }
-.menulink{
-    text-decoration: none;
-    color:inherit;
+
+.menu button{
+    background-color:transparent;
+    color: #0D5D56;
+    border: none;
+    border-radius:0;
+    font-size: 1.1rem;
+    padding:0;
+    margin-left:15px;
+}
+
+.menu button:hover{
+    background-color: rgba(95, 231, 134, 0.3);
+    box-shadow: 0px 0px 50px #61E786;
+}
+
+hr{
+    border: 2px solid;
+    border-image: linear-gradient(90deg,#61E786 34%, #06AED5 67%, #9792E3 100%) 1;
+
 }
 
 .cleardiv{
-clear:both;
+    clear:both;
 }
 
 main{
     text-align: center;
 }
 
-button{
-    padding:5px 15px;
-    background-color:white;
-    border:2px solid white;
-}
-
-button:hover{
-    background-color:lightgrey;
-}
-
-#footer1{
-    text-align:center;
+#footer1 {
     background-color:#22577A;
     color:white;
-    padding:15px
+    padding:15px;
 }
+
 .blurple{
     color:#565dff;
 }
