--- a/style.css
+++ b/style.css
@@ -1,79 +1,99 @@
-html{width:auto;
+html {
+    width: auto;
     background: #EDFFEC;
     font-size: 15px;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     color: #0D0221;
 }
 
-header{
-    position:sticky;
+body {
+    margin: 0;
 }
 
-.mikeylogo{
-    float:left;
+.mikeylogo {
+    float: left;
     padding: 0px 25px;
-   height: 100px;
+    height: 100px;
     width: 100px;
 }
 
-.menu{
-    text-align:right;
-    float:right;
-    padding:50px 15px 0px 15px;
+.menu {
+    text-align: right;
+    float: right;
+    padding: 50px 15px 0px 15px;
     border-right: 1px solid #38A3A5;
     border-bottom: 1px solid #38A3A5;
-    border-radius:20px;
-    width:400px;
-    position:sticky;
+    border-radius: 20px;
+    width: 40%;
 
 }
 
-.menu button{
-    background-color:transparent;
+.menu button {
+    background-color: transparent;
     color: #0D5D56;
     border: none;
-    border-radius:0;
+    border-radius: 0;
     font-size: 1.1rem;
-    padding:0;
-    margin-left:15px;
+    padding: 0;
+    margin-left: 15px;
 }
 
-.menu button:hover{
+.menu button:hover {
     background-color: rgba(95, 231, 134, 0.3);
     box-shadow: 0px 0px 50px #61E786;
 }
 
-hr{
-    border: 2px solid;
-    border-image: linear-gradient(90deg,#61E786 34%, #06AED5 67%, #9792E3 100%) 1;
-
+hr {
+    border: 5px solid;
+    border-image: linear-gradient(90deg, #61E786 34%, #06AED5 67%, #9792E3 100%) 1;
 }
 
-.cleardiv{
-    clear:both;
+.cleardiv {
+    clear: both;
 }
 
-main{
+main {
     text-align: center;
 }
 
-.mainimg{
-    max-height:100px;
-    width:auto;
-    object-fit:cover;
+.mainimg {
+    max-height: 100px;
+    width: auto;
+    object-fit: cover;
 }
 
 #footer1 {
-    background-color:#22577A;
-    color:white;
-    padding:15px;
+    background-color: #22577A;
+    color: white;
+    padding: 15px;
 }
-#introh1{
-text-align:center;
-letter-spacing:15px;
+
+#introh1 {
+    text-align: center;
+    letter-spacing: 15px;
+}
+
+.smalldiv {
+    width: 20%;
+    height: 10px;
+}
+
+.bodydiv {
+    margin-left:10%;
+    margin-right:10%;
+}
+
+.journeydiv{
+    text-align:left;
+    margin-left:2%;
+    margin-right:40%;
+}
+.joruneyimg{
+    display:inline;
+    height:100px;
 }
 
 
-.blurple{
-    color:#565dff;
+.blurple {
+    color: #565dff;
 }
