--- a/style.css
+++ b/style.css
@@ -10,22 +10,11 @@ body {
     margin: 0;
 }
 
-.mikeylogo {
-    float: left;
-    padding: 0px 25px;
-    height: 100px;
-    width: 100px;
-}
-
-.menu {
+nav {
     text-align: right;
-    float: right;
-    padding: 50px 15px 0px 15px;
-    border-right: 1px solid #38A3A5;
-    border-bottom: 1px solid #38A3A5;
-    border-radius: 20px;
-    width: 40%;
-
+    padding: 30px 15px 0px 15px;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .menu button {
@@ -35,12 +24,12 @@ body {
     border-radius: 0;
     font-size: 1.1rem;
     padding: 0;
-    margin-left: 15px;
+    margin: 15px;
 }
 
 .menu button:hover {
     background-color: rgba(95, 231, 134, 0.3);
-    box-shadow: 0px 0px 50px #61E786;
+    box-shadow: 0px 0px 2rem #61E786;
 }
 
 hr {
@@ -54,7 +43,7 @@ hr {
 
 main {
     text-align: center;
-    max-width: 900px;
+    max-width: 90%;
     margin: auto;
 }
 
@@ -74,6 +63,7 @@ main {
 #introh1 {
     text-align: center;
     letter-spacing: 15px;
+    font-style: italic;
 }
 
 .smalldiv {
@@ -90,8 +80,8 @@ main {
 
 .journeydiv {
     text-align: left;
-    height:auto;
-    padding-bottom:200px;
+    height: auto;
+    padding-bottom: 200px;
     vertical-align: center;
 }
 
@@ -102,14 +92,14 @@ main {
 
 .journeyimgl {
     float: left;
-    height:250px;
-    padding-right:30px;
+    height: 250px;
+    padding-right: 30px;
 }
 
 .journeyimgr {
     float: right;
-    height:250px;
-    padding-left:30px;
+    height: 250px;
+    padding-left: 30px;
 }
 
 .blurple {
