--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     width: auto;
-    background: #EDFFEC;
+    background: #ffffff;
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
     color: #0D0221;
