--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
     background: #ffffff;
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
-    color: #0D0221;
+    color: black;
 }
 
 body {
@@ -11,7 +11,7 @@ body {
 }
 
 nav {
-    text-align: right;
+    text-align: center;
     padding: 30px 15px 0px 15px;
     display: flex;
     justify-content: space-evenly;
@@ -19,7 +19,8 @@ nav {
 
 .menu button {
     background-color: transparent;
-    color: #0D5D56;
+    color: black;
+    text-transform: uppercase;
     border: none;
     border-radius: 0;
     font-size: 1.1rem;
@@ -28,8 +29,8 @@ nav {
 }
 
 .menu button:hover {
-    background-color: rgba(95, 231, 134, 0.3);
-    box-shadow: 0px 0px 2rem #61E786;
+    background-color: rgba(189,226,226,0.3);
+    box-shadow: 0px 0px 2rem #bde2e2;
 }
 
 hr {
@@ -39,6 +40,10 @@ hr {
 
 .cleardiv {
     clear: both;
+}
+
+.centered {
+    text-align:center;
 }
 
 main {
